Some cleanup, added unittests, added regex validation, missing integration test